--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <ol>
 
         <li> Take Bus from the airport to JNTUH</li>
-        <li>OR Take a cab from the airport to the Restaurant</li>>
+        <li>OR Take a cab from the airport to the Restaurant</li>
         <ol>
         <li>Jntuh Near</li>
         <li>Secunderabad Far</li>   
@@ -25,13 +25,19 @@
         <li>Step down at KFC Restaurant</li>
     </ol>
 
+    <h3>Recomended Food Items</h3>
 
-### Recommended food
+    <ul>
 
-* Mingles Bucket
-* Rice Bowl
-* Wraps
-* Brownie
+        <li>Mingles Bucket</li>
+
+        <li>Rice Bowl</li>
+
+        <li>Wraps</li>
+
+        <li>Brownie</li>
+
+    </ul>
         </body>
         
 
