--- a/index.html
+++ b/index.html
@@ -26,18 +26,14 @@
     </ol>
 
     <h3>Recomended Food Items</h3>
-
     <ul>
+         <li>Mingles Bucket</li>
+         <li>Rice Bowl</li>
+         <li>Wraps</li>
+         <li>Brownie</li>
+        </ul>
 
-        <li>Mingles Bucket</li>
-
-        <li>Rice Bowl</li>
-
-        <li>Wraps</li>
-
-        <li>Brownie</li>
-
-    </ul>
+        <a href="aboutMe.html">GoTo aboutme</a>
         </body>
         
 
