--- a/index.html
+++ b/index.html
@@ -33,6 +33,49 @@
          <li>Brownie</li>
         </ul>
 
+        <hr>
+
+
+
+<h2>Recomended Games</h2>
+
+
+
+<p>Below table gives a breif intro about gaming activites and the location of gaming arena along with amount payable
+for any additional equipment opted.</p>
+
+
+
+
+
+<table border="3px">
+<tr>
+<th>Sport</th>
+<th>Location</th>
+<th>Money Payable</th>
+</tr>
+<tr>
+<td>Badminton</td>
+<td>Kansas</td>
+<td>$ 2500</td>
+</tr>
+<tr>
+<td>Cricket</td>
+<td>Florida</td>
+<td>$ 3070</td>
+</tr>
+<tr>
+<td>Surfing</td>
+<td>Texas</td>
+<td>$ 3400</td>
+</tr>
+<tr>
+<td>Karting</td>
+<td>Chicago</td>
+<td>$ 1700</td>
+</tr>
+</table>
+
         <a href="aboutMe.html">GoTo aboutme</a>
         </body>
         
