Added bonus link

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>Assignment</title>
         </head>
         <body bgcolor=#ebebe0>
+            <a href="bonus.html">BONUS></a>
+
             <h1>Yashahsri Kanneti</h1>
             <h4>KFC RESTAURANT</h4>
             My favourite food in that place is Mingles Bucket in Hyderabd
