Added bonus link1

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Assignment</title>
         </head>
         <body bgcolor=#ebebe0>
-            <a href="bonus.html">BONUS></a>
+            <a href="bonus.html">BONUS</a>
 
             <h1>Yashahsri Kanneti</h1>
             <h4>KFC RESTAURANT</h4>
