--- a/bonus.html
+++ b/bonus.html
@@ -6,16 +6,15 @@
     <body>
     <h2 style="color: blue;text-align: Center;font-family:inherit;">Toledo Thunders</h2>
     <p  style = "background-color: yellowgreen;">
-            Toledo Thor is the mascot of the Northwest Missouri State University for Football. It
-            is designed by Yashahsri Kanneti. The mascot Thunders is an alligator which is in green
-            and yellow color.
+            Kansas is the kind of the Northwest Missouri State University for Football. It
+            is designed by Yashahsri Kanneti. The kind kansas is yak which is in black color.
         </p>
-        <p>Fun facts about Peacock:</p>
+        <p>Fun facts about Yak:</p>
         <ul>
-            <li>peacock, also called peafowl, any of three species of resplendent birds of the pheasant family, Phasianidae (order Galliformes). </li>
-            <li> The blue peacock’s body feathers are mostly metallic blue-green.</li>
+            <li>Yaks are heavily built animals with a sturdy frame that have long, thick hair. </li>
+            <li> Yaks are animals that are native to Tibet and China</li>
         </ul>
-        <img src="Peacock.jpg" height="400" width="300" alt ="Peacock">
+        <img src="Yak.jpg" height="400" width="300" alt ="Yak">
         <p>Here is the link to index.html: <a href="index.html">Link to index.html</a></p>
     </body>
 </html>
